 - translated to Korean, thanks to Cho Bkwon
 - display in About activity when app was built
 - translated to Belarusian, thanks to Kastuś Kašenia
 - translated to Catalan, thanks to Josep Constanti
 - CID 60861-60864 : fix Coverity issue : dereference null return value
 - build against Android SDK 4.4W (API 20)
 - translated to Russian, thanks to Олег Нощенко

 v0.3 (released on 07Jul2014)
 - CID 60865 : fix Coverity issue : dereference null return value
 - CID 60867 : fix Coverity issue : EC: Comparing incompatible types for equality
 - CID 60866, 60868 : fix Coverity issue : Casting from integer values
 - issue #147 : introduce CircularAverage class to make sensor based orientation value less jumpy
 - rename FormatUtils.CIRCLE_* constants
 - translated to Danish, thanks to Jan Madsen
 - translated to Portuguese (Brazil), thanks to Zoé Junior
 - issue #152 : detect Travel Direction and adjust relative direction to destionation accordingly
 - issue #155 : add script to remove incomplete translations
 - use enum NavigationMode for NavigationView.mMode
 - translated to Chinese (Traditional), thanks to Ezjerry Liao
 - issue #128 : Draw a compass rose pointing North
 - translated to French, thanks to Pierre Barre and an anonymous contributor
 - CID 68697 : fix Coverity issue : dereference null return value, when getting package info

 v0.2 (released on 26Apr2014)
 - issue #112 : update ic_launcher-web.png icon
 - issue #111 : add xxhdpi and xxxhdpi version of all images
 - optimize size of PNG images
 - use SystemClock.elapsedRealtime() to get elapsed time in milliseconds in AriadneLocation.isRecent()
 - issue #78 : add classes to convert (rotate) sets of coordinates
 - redesign arrow pointing to destination, using RotationConverter and Coordinates classes
 - issue #125 : add property to Coordinates class to close a line 
 - issue #130 : remove unnecessary AriadneLocation conversion and try-catch in DetailsActivity and MainActivity